// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SegmentDetails overnight should not show overnight indicator when isOvernight is false 1`] = `null`;

exports[`SegmentDetails overnight should show overnight indicator when isOvernight is true 1`] = `
<div
  class="multi-day-indicator multi-day-indicator--overnight-red"
  data-qa="overnight-indicator"
>
  <i
    class="multi-day-indicator--icon multi-day-indicator--icon-small icon icon_next-day-indicator"
  />
  <p
    class="multi-day-indicator--font-small"
  >
    AIR_BOOKING__SHOPPING__OVERNIGHT
  </p>
</div>
`;

exports[`SegmentDetails viewUpgradedBoarding present should not show Upgraded Boarding button when UPGRADED_BOARDING is false 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="flight-segment-details"
        >
          <div
            class="flight-segment-details--time-and-flight"
          >
            <div
              class="flight-segment-details--time-block"
            >
              <div
                class="flight-segment-details--time-block-label"
              >
                SHARED__FLIGHT_SEGMENT_DETAILS__DEPARTS
              </div>
              <div
                class="flight-segment-details--time-block-time"
              >
                6:00
                <span
                  class="flight-segment-details--time-block-time-ampm"
                >
                  AM
                </span>
              </div>
            </div>
            <div
              class="flight-segment-details--flight-number"
            >
              <div>
                SHARED__FLIGHT_SEGMENT_DETAILS__FLIGHT
                 
                179
              </div>
              <i
                class="icon icon_airplane"
              />
            </div>
            <div
              class="flight-segment-details--time-block align-right"
            >
              <div
                class="flight-segment-details--time-block-label"
              >
                SHARED__FLIGHT_SEGMENT_DETAILS__ARRIVES
              </div>
              <div
                class="flight-segment-details--time-block-time"
              >
                9:00
                <span
                  class="flight-segment-details--time-block-time-ampm"
                >
                  AM
                </span>
              </div>
            </div>
          </div>
          <div
            class="flight-segment-details--airports"
          >
            <div
              class="flight-segment-details--airport-info pr3"
            >
              Chicago (Midway), IL - MDW
            </div>
            <div
              class="flight-segment-details--airport-info pl3 align-right"
            >
              New York/Newark, NJ - EWR
            </div>
          </div>
        </div>
        <div
          class="boarding-info boarding-information center pt5 pb5 mt3"
        >
          <div
            class="boarding-information--item-row"
          >
            <div
              class="boarding-information--item"
            >
              <div
                class="boarding-information--item-label"
              >
                SHARED__BOARDING_INFORMATION__GATE
              </div>
              <div
                class="boarding-information--item-info"
              >
                ---
              </div>
            </div>
            <div
              class="boarding-information--item"
            >
              <div
                class="boarding-information--item-label"
              >
                SHARED__BOARDING_INFORMATION__GROUP
              </div>
              <div
                class="boarding-information--item-info"
              >
                A
              </div>
            </div>
            <div
              class="boarding-information--item"
            >
              <div
                class="boarding-information--item-label"
              >
                SHARED__BOARDING_INFORMATION__POSITION
              </div>
              <div
                class="boarding-information--item-info_right"
              >
                20
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt3"
        >
          <button
            class="detailed-trip-card--detail-button button"
            type="button"
          >
            View/Manage
          </button>
        </div>
        <div>
          <div
            class="mt3"
          >
            <button
              class="button button--fluid button--yellow"
              title="SHARED__BUTTON_TEXT__BOARDING_PASSES"
              type="button"
            >
              SHARED__BUTTON_TEXT__BOARDING_PASSES
            </button>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="flight-segment-details"
      >
        <div
          class="flight-segment-details--time-and-flight"
        >
          <div
            class="flight-segment-details--time-block"
          >
            <div
              class="flight-segment-details--time-block-label"
            >
              SHARED__FLIGHT_SEGMENT_DETAILS__DEPARTS
            </div>
            <div
              class="flight-segment-details--time-block-time"
            >
              6:00
              <span
                class="flight-segment-details--time-block-time-ampm"
              >
                AM
              </span>
            </div>
          </div>
          <div
            class="flight-segment-details--flight-number"
          >
            <div>
              SHARED__FLIGHT_SEGMENT_DETAILS__FLIGHT
               
              179
            </div>
            <i
              class="icon icon_airplane"
            />
          </div>
          <div
            class="flight-segment-details--time-block align-right"
          >
            <div
              class="flight-segment-details--time-block-label"
            >
              SHARED__FLIGHT_SEGMENT_DETAILS__ARRIVES
            </div>
            <div
              class="flight-segment-details--time-block-time"
            >
              9:00
              <span
                class="flight-segment-details--time-block-time-ampm"
              >
                AM
              </span>
            </div>
          </div>
        </div>
        <div
          class="flight-segment-details--airports"
        >
          <div
            class="flight-segment-details--airport-info pr3"
          >
            Chicago (Midway), IL - MDW
          </div>
          <div
            class="flight-segment-details--airport-info pl3 align-right"
          >
            New York/Newark, NJ - EWR
          </div>
        </div>
      </div>
      <div
        class="boarding-info boarding-information center pt5 pb5 mt3"
      >
        <div
          class="boarding-information--item-row"
        >
          <div
            class="boarding-information--item"
          >
            <div
              class="boarding-information--item-label"
            >
              SHARED__BOARDING_INFORMATION__GATE
            </div>
            <div
              class="boarding-information--item-info"
            >
              ---
            </div>
          </div>
          <div
            class="boarding-information--item"
          >
            <div
              class="boarding-information--item-label"
            >
              SHARED__BOARDING_INFORMATION__GROUP
            </div>
            <div
              class="boarding-information--item-info"
            >
              A
            </div>
          </div>
          <div
            class="boarding-information--item"
          >
            <div
              class="boarding-information--item-label"
            >
              SHARED__BOARDING_INFORMATION__POSITION
            </div>
            <div
              class="boarding-information--item-info_right"
            >
              20
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt3"
      >
        <button
          class="detailed-trip-card--detail-button button"
          type="button"
        >
          View/Manage
        </button>
      </div>
      <div>
        <div
          class="mt3"
        >
          <button
            class="button button--fluid button--yellow"
            title="SHARED__BUTTON_TEXT__BOARDING_PASSES"
            type="button"
          >
            SHARED__BUTTON_TEXT__BOARDING_PASSES
          </button>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`SegmentDetails viewUpgradedBoarding present should show Upgraded Boarding button when UPGRADED_BOARDING is true 1`] = `
<div>
  <div>
    <div
      class="flight-segment-details"
    >
      <div
        class="flight-segment-details--time-and-flight"
      >
        <div
          class="flight-segment-details--time-block"
        >
          <div
            class="flight-segment-details--time-block-label"
          >
            SHARED__FLIGHT_SEGMENT_DETAILS__DEPARTS
          </div>
          <div
            class="flight-segment-details--time-block-time"
          >
            6:00
            <span
              class="flight-segment-details--time-block-time-ampm"
            >
              AM
            </span>
          </div>
        </div>
        <div
          class="flight-segment-details--flight-number"
        >
          <div>
            SHARED__FLIGHT_SEGMENT_DETAILS__FLIGHT
             
            179
          </div>
          <i
            class="icon icon_airplane"
          />
        </div>
        <div
          class="flight-segment-details--time-block align-right"
        >
          <div
            class="flight-segment-details--time-block-label"
          >
            SHARED__FLIGHT_SEGMENT_DETAILS__ARRIVES
          </div>
          <div
            class="flight-segment-details--time-block-time"
          >
            9:00
            <span
              class="flight-segment-details--time-block-time-ampm"
            >
              AM
            </span>
          </div>
        </div>
      </div>
      <div
        class="flight-segment-details--airports"
      >
        <div
          class="flight-segment-details--airport-info pr3"
        >
          Chicago (Midway), IL - MDW
        </div>
        <div
          class="flight-segment-details--airport-info pl3 align-right"
        >
          New York/Newark, NJ - EWR
        </div>
      </div>
    </div>
    <div
      class="boarding-info boarding-information center pt5 pb5 mt3"
    >
      <div
        class="boarding-information--item-row"
      >
        <div
          class="boarding-information--item"
        >
          <div
            class="boarding-information--item-label"
          >
            SHARED__BOARDING_INFORMATION__GATE
          </div>
          <div
            class="boarding-information--item-info"
          >
            ---
          </div>
        </div>
        <div
          class="boarding-information--item"
        >
          <div
            class="boarding-information--item-label"
          >
            SHARED__BOARDING_INFORMATION__GROUP
          </div>
          <div
            class="boarding-information--item-info"
          >
            A
          </div>
        </div>
        <div
          class="boarding-information--item"
        >
          <div
            class="boarding-information--item-label"
          >
            SHARED__BOARDING_INFORMATION__POSITION
          </div>
          <div
            class="boarding-information--item-info_right"
          >
            20
          </div>
        </div>
      </div>
    </div>
    <button
      class="detailed-trip-card--upgraded-boarding-btn button button--fluid button--blue"
      type="button"
    >
      Upgrade boarding position to A1 - A15
    </button>
    <div
      class="mt3"
    >
      <button
        class="detailed-trip-card--detail-button button"
        type="button"
      >
        View/Manage
      </button>
    </div>
    <div>
      <div
        class="mt3"
      >
        <button
          class="button button--fluid button--yellow"
          title="SHARED__BUTTON_TEXT__BOARDING_PASSES"
          type="button"
        >
          SHARED__BUTTON_TEXT__BOARDING_PASSES
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`SegmentDetails when segment is provided should display the flight segment details 1`] = `
<div
  class="flight-segment-details"
>
  <div
    class="flight-segment-details--time-and-flight"
  >
    <div
      class="flight-segment-details--time-block"
    >
      <div
        class="flight-segment-details--time-block-label"
      >
        SHARED__FLIGHT_SEGMENT_DETAILS__DEPARTS
      </div>
      <div
        class="flight-segment-details--time-block-time"
      >
        7:00
        <span
          class="flight-segment-details--time-block-time-ampm"
        >
          PM
        </span>
      </div>
    </div>
    <div
      class="flight-segment-details--flight-number"
    >
      <div>
        SHARED__FLIGHT_SEGMENT_DETAILS__FLIGHT
         
        15
      </div>
      <i
        class="icon icon_airplane"
      />
    </div>
    <div
      class="flight-segment-details--time-block align-right"
    >
      <div
        class="flight-segment-details--time-block-label"
      >
        SHARED__FLIGHT_SEGMENT_DETAILS__ARRIVES
      </div>
      <div
        class="flight-segment-details--time-block-time"
      >
        8:10
        <span
          class="flight-segment-details--time-block-time-ampm"
        >
          PM
        </span>
      </div>
    </div>
  </div>
  <div
    class="flight-segment-details--airports"
  >
    <div
      class="flight-segment-details--airport-info pr3"
    >
      Dallas (Love Field), TX - DAL
    </div>
    <div
      class="flight-segment-details--airport-info pl3 align-right"
    >
      Nashville, TN - BNA
    </div>
  </div>
</div>
`;
